text changes for may 2017 and remove pictures

--- a/main/templates/contact.html
+++ b/main/templates/contact.html
@@ -46,16 +46,14 @@
 				</form>
 			</div>
 			<div class="col-md-6">
-				<div class="col-md-12">
-					<img src="{{ STATIC_URL }}images/booa_kids_outside.jpg" class="pull-left left-space-tiny" style="margin-top: -35px" height=300>
-				</div>
 				<div class="col-md-12 left-space top-space-small">
-					C/O IMPACT <br />
-					BP 131, Ouidah <br />
-					Atlantique Department <br />
-					Benin <br />
+					Département de L’Atlantique <br />
+					Commune de Ouidah, 2<sup>eme</sup> Arrondissement <br />
+					Quartier Lèbou, Carre Sans Bornes <br />
+					Maison Kpèhounton Sébastien <br />
+					B.P. 131 Ouidah <br />
 					<br />
-					<div><i class="glyphicon glyphicon-earphone"></i> (630) 589-6023</div>
+					<div><i class="glyphicon glyphicon-earphone"></i> +229 67 30 00 40</div>
 					<div><i class="glyphicon glyphicon-envelope"></i> brasouvertsopenarms@gmail.com</div>
 					You can also find us on <a href="https://www.facebook.com/brasouvertsopenarms/"><strong>Facebook</strong></a>
 				</div>
