--- a/main/templates/team.html
+++ b/main/templates/team.html
@@ -6,20 +6,19 @@
 			<img src="{{ STATIC_URL }}images/team/remedy.png" class="team-img pull-left" width="195">
 			<div class="pull-left left-space top-space col-md-6">
 				<h3 class="name-heading"><strong>Remedy Sueza</strong></h3>
-				<h4 class="team-title"><i>Founder &amp; Lead teacher</i></h4>
+				<h4 class="team-title"><i>Specialist &amp; Advisor in Education</i></h4>
 				<p>
-					Refugee who fled Nigeria in 1999 in fear of persecution. Studied mechanical engineering.
+					With more than 15 years of experience in training and educating children and young teenagers, Remedy is currently Director of BOOA’s educational center, Peace Academy, in Ouidah.
 				</p>
 			</div>
 		</div>
 		<div class="row bottom-space">
-			<img src="{{ STATIC_URL }}images/team/jp.png" class="team-img pull-right" width="195">
+			<img src="{{ STATIC_URL }}images/team/felix.png" class="team-img pull-right" width="195">
 			<div class="pull-right right-space top-space text-right col-md-6">
-				<h3 class="name-heading"><strong>Jan Pieter Snoeij</strong></h3>
-				<h4 class="team-title"><i>Operations Manager</i></h4>
+				<h3 class="name-heading"><strong>Félix Aimé Mensah</strong></h3>
+				<h4 class="team-title"><i>Specialist in Rural Development &amp; Land Management</i></h4>
 				<p>
-					Development Studies graduate student at the Graduate Institute (IHEID) in Geneva, Switzerland.
-					Previously obtained a Masters in International Economics.
+					A consultant on development projects and the management of non-governmental organizations, Felix has more than 17 years of experience with related projects in Benin. He is presently the Treasurer and a local representative of BOOA. He manages daily activities and the evaluation of projects in Benin.
 				</p>
 			</div>
 		</div>
@@ -36,13 +35,13 @@
 			</div>
 		</div>
 		<div class="row bottom-space">
-			<img src="{{ STATIC_URL }}images/team/felix.png" class="team-img pull-right" width="195">
+			<img src="{{ STATIC_URL }}images/team/jp.png" class="team-img pull-right" width="195">
 			<div class="pull-right right-space top-space text-right col-md-6">
-				<h3 class="name-heading"><strong>Felix Mensan</strong></h3>
-				<h4 class="team-title"><i>Implementation Consultant</i></h4>
+				<h3 class="name-heading"><strong>Jan Pieter Snoeij</strong></h3>
+				<h4 class="team-title"><i>Operations Manager</i></h4>
 				<p>
-					Program manager at IMPACT. Specialist in terrain cultivation and project development 
-					with over 15 years of relevant project experience in Benin.
+					Development Studies graduate student at the Graduate Institute (IHEID) in Geneva, Switzerland.
+					Previously obtained a Masters in International Economics.
 				</p>
 			</div>
 		</div>
@@ -71,24 +70,13 @@
 			</div>
 		</div>
 		<div class="row bottom-space">
-			<img src="{{ STATIC_URL }}images/team/anatole.png" class="team-img pull-left" width="195">
-			<div class="pull-left left-space top-space col-md-6">
-				<h3 class="name-heading"><strong>Anatole Megnigbeto</strong></h3>
-				<h4 class="team-title"><i>Project Advisor</i></h4>
-				<p>
-					Executive director at IMPACT, a Beninese non-profit. Has over 15 years of experience 
-					with the execution of education and sustainable agriculture projects in Benin.
-				</p>
-			</div>
-		</div>
-		<div class="row bottom-space">
-			<img src="{{ STATIC_URL }}images/team/chris.jpg" class="team-img pull-right" width="195">
-			<div class="pull-right right-space top-space text-right col-md-6">
+			<img src="{{ STATIC_URL }}images/team/chris.jpg" class="team-img pull-left" width="195">
+			<div class="pull-left right-left top-space text-right col-md-6">
 				<h3 class="name-heading"><strong>Chris Moirano</strong></h3>
 				<h4 class="team-title"><i>Technology Cosultant</i></h4>
 				<p>
-					Graduate of Marquette University College of Business Administration. Currently working as
-					a software engineer at Procured Health and for BOOA.
+					Computer science graduate student at New York University. Currently working as
+					a software engineer at Procured Health and for BOOA implementing the computer lab.
 				</p>
 			</div>
 		</div>
