--- a/main/templates/vision.html
+++ b/main/templates/vision.html
@@ -6,29 +6,17 @@
 		</div>
 		<div class="row">
 			<div class="text-container main-text">
-				<h2><strong>Education centered development</strong></h2>
+				<h2><strong>Vision</strong></h2>
 				<p>
-					The main goal of Bras Ouverts – Open Arms (BOOA) is to establish a sustainably financed school that provides free education in Ouidah, Benin. BOOA serves a community of Nigerian refugees who fled environmental destruction, as well as marginalized Beninese children. In particular, we prioritize the education and empowerment of women and girls. 
-				</p>
-				<p>
-					Ultimately, the BOOA team seeks to prepare students for future employment so that they may live stable and fulfilling lives. To achieve this vision, we utilize an integrated approach that is comprised of five main components:
+					Bras Ouverts – Open Arms (BOOA) became an officially registered non-governmental organization in Benin on March 15, 2017. BOOA's five main areas of work are:
 				</p>
 				<ul>
-					<li>Education</li>
-					<li>Community involvement</li>
-					<li>Social initiatives</li>
-					<li>Sustainable financing</li>
-					<li>Health</li>
+					<li>Facilitating access to education for children and disadvantaged families</li>
+					<li>Promoting respect for human rights, especially the rights of women and children, through training and support</li>
+					<li>Enhancing durable access to potable water, to food and to renewable energy, and contributing to the protection of the environment</li>
+					<li>Promoting health education through trainings on the prevention of diseases and on community hygiene</li>
+					<li>Aiding families with developing revenue-generating activities that will help them achieve autonomy</li>
 				</ul>
-				<p>
-					First, with regards to education, we follow the curriculum standards of the regional West African Examinations Council, and we incorporate French lessons so that the students can better interact with French speaking locals. We are also assisting our teachers with pedagogical training online.
-				</p>
-				<p>
-					<img align="right" src="{{ STATIC_URL }}images/remedy_in_school.png" class="paragraph-picture">Second, we are committed to communicating openly with the various groups living in Ouidah in order to build community involvement. We encourage parent participation in the school and are responding to community needs by  implementing desired programs.  For example, we plan to begin some nighttime classes for adults. These tie into our sustainable financing strategy because they will generate revenue for costs such as teachers’ salaries and supplies. Currently, we are fundraising through traditional grant and donation methods. However, we plan to transition to self-generated income after completing initial infrastructure and materials investments.
-				</p>
-				<p>
-					Finally, we hope to address the community’s physical and mental well-being. Whilst this is a more long-term goal, we strive to make the latter an integral part of our educational program and intend to prioritize our students’ nutrition and health so that they have the energy to learn and prosper.
-				</p>
 			</div>
 		</div>
 	</div>
