--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -6,7 +6,7 @@
 		</div>
 		<div id="main-text" class="col-md-4">
 			<h2 style="font-size: 31px;"><strong>Bras Ouverts – Open Arms</strong></h2>
-			The main goal of Bras Ouverts – Open Arms (BOOA) is to establish a sustainably financed school that provides free education in Ouidah, Benin. BOOA serves a community of Nigerian refugees who fled environmental destruction, as well as marginalized Beninese children. In particular, we prioritize the education and empowerment of women and girls.
+			The main goal of Bras Ouverts – Open Arms (BOOA) is to improve the lives of marginalized communities in Benin. BOOA is based in Ouidah in the Atlantique Department of Benin.
 		</div>
 	</div>
 {% endblock %}
