--- a/main/templates/projects.html
+++ b/main/templates/projects.html
@@ -1,29 +1,27 @@
 {% extends "base.html" %}
 {% block body %}
 	<div class="left-space right-space">
-		<h2 style="margin-bottom: 0"><strong>Priorities</strong></h2>
+		<h2 style="margin-bottom: 0"><strong>Projects &amp; Collaboration</strong></h2>
 		<div class="row">
 			<div class="col-md-6">
-				<div class="col-md-6">
-					<h3>NGO Registration</h3>
-					<ul>
-						<li>
-							We are in the process of registering with the Beninese Government and expect 
-							to have official non-governmental organization status by 2017.
-						</li>
-					</ul>
-				</div>
-				<div class="col-md-6">
-					<h3>Research</h3>
-					<ul>
-						<li>
-							We will continue to analyze the root causes underlying the marginalization of BOOA’s stakeholders and
-						</li>
-						<li>
-							Identify partners who can help us to implement solutions for these challenges.
-						</li>
-					</ul>
-				</div>
+				<h3>Education</h3>
+				<ul>
+					<li>
+						BOOA runs an educational center called Peace Academy for children in need of assistance. The center provides instruction in English and French.
+					</li>
+				</ul>
+				<h3>Pedagogical Development</h3>
+				<ul>
+					<li>
+						Our teachers continue to further their own educations through online courses and consultation with experts.
+					</li>
+				</ul>
+				<h3>Library – Computer Lab</h3>
+				<ul>
+					<li>
+						 We are gathering resources to assemble a library – lab that will provide regular access to reading materials and information technologies.
+					</li>
+				</ul>
 			</div>
 			<div class="col-md-6 text-center">
 				<iframe width="460" height="315" src="https://www.youtube.com/embed/JUcUtLc46Sw" frameborder="0" allowfullscreen></iframe>
@@ -31,38 +29,27 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6">
-				<div class="col-md-6">
-					<h3>Education Enhancement</h3>
-					<ul>
-						<li>
-							We will continue to diversify our teaching methods and incorporate technology into the curriculum.
-						</li>
-					</ul>
-				</div>
-				<div class="col-md-6">
-					<h3>Sustainable Financing</h3>
-					<ul>
-						<li>
-							We seek to generate enough income to finance our teachers’ salaries by the end of the 2016 – 2017 school year.
-						</li>
-					</ul>
-				</div>
-				<div class="col-md-6">
-					<h3>Increase Enrollment</h3>
-					<ul>
-						<li>
-							We strive to enroll 50 children by June 2017 (up from about 30 in September 2016).
-						</li>
-					</ul>
-				</div>
-				<div class="col-md-6">
-					<h3>Ensure Project Endurance</h3>
-					<ul>
-						<li>
-							We will recruit new volunteers to help carry on BOOA’s mission in the long-term.
-						</li>
-					</ul>
-				</div>
+				<h3>Legal Aid</h3>
+				<ul>
+					<li>
+						 We are assisting with the procurement of legal identification documents and residence permits for displaced persons Benin.
+					</li>
+					<li>
+						We are also aiding families with obtaining birth certificates for unregistered children.
+					</li>
+				</ul>
+				<h3>Access to Clean Water</h3>
+				<ul>
+					<li>
+						In collaboration with Northwestern University's Engineers for a Sustainable World, we are working to provide clean water at BOOA's educational center.
+					</li>
+				</ul>
+				<h3>Hygiene</h3>
+				<ul>
+					<li>
+						We are training the community on proper waste disposal and the importance of handwashing.
+					</li>
+				</ul>
 			</div>
 			<div class="col-md-6 text-center top-space-large">
 				<img src="{{ STATIC_URL }}images/booa_kids_masks.jpg" width="460">
@@ -70,38 +57,21 @@
 		</div>
 			<div class="row top-space-small">
 				<div class="col-md-5">
-					<img src="{{ STATIC_URL }}images/tree_table.jpg" class="pull-left paragraph-picture" style="margin-left: 0; margin-top:110px">
+					<img src="{{ STATIC_URL }}images/tree_table.jpg" class="pull-left paragraph-picture" style="margin-left: 0; margin-top:56px">
 				</div>
 				<div class="pull-right col-md-7">
-					<h2><strong>Projects &amp; Collaboration</strong></h2>
-					<h3>Pedagogical Development</h3>
+					<h2><strong>Future Projects</strong></h2>
+					<h3>We are open to requests for assistance with the following areas:</h3>
+					<h3>Infrastructure Improvements</h3>
 					<ul>
 						<li>
-							Our teachers continue to further their own educations through online courses and consultation with experts.
+							Wells, bathrooms, classrooms, energy.
 						</li>
 					</ul>
-					<h3>Sustainable Energy</h3>
+					<h3>Human Rights Trainings</h3>
 					<ul>
 						<li>
-							BOOA has partnered with One Million Lights to provide solar lamps for the school. We will also distribute lights to the community so that our students can study at night, and their families can work and cook into the evening.
-						</li>
-						<li>
-							In addition to solar lamps, we plan to install a solar panel system to power lighting, computers and printers at the school. 
-						</li>
-					</ul>
-					<h3>Library &mdash; Computer Lab</h3>
-					<ul>
-						<li>
-							We are applying for grants and gathering resources to assemble a library – lab that will provide regular access to reading materials and information technologies. 
-						</li>
-						<li>
-							We will open the facility to interested members of the community and will use it to generate revenue via computer classes.
-						</li>
-					</ul>
-					<h3>Health</h3>
-					<ul>
-						<li>
-							We are partnering with a nurse practitioner to provide check-ups and teach basic medical skills to members of the community.
+							Women’s rights, children’s rights, displaced persons’ rights.
 						</li>
 					</ul>
 				</div>
