--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -6,7 +6,12 @@
 		</div>
 		<div id="main-text" class="col-md-4">
 			<h2 style="font-size: 31px;"><strong>Bras Ouverts – Open Arms</strong></h2>
-			The main goal of Bras Ouverts – Open Arms (BOOA) is to improve the lives of marginalized communities in Benin. BOOA is based in Ouidah in the Atlantique Department of Benin.
+			<span class="en">
+				The main goal of Bras Ouverts – Open Arms (BOOA) is to improve the lives of marginalized communities in Benin. BOOA is based in Ouidah in the Atlantique Department of Benin.
+			</span>
+			<span class="fr">
+				Le but central de Bras Ouverts – Open Arms (BOOA) est de contribuer à l’amélioration des conditions de vie des communautés défavorisées du Bénin. BOOA est basée à Ouidah dans le Département de L’Atlantique du Bénin.
+			</span>
 		</div>
 	</div>
 {% endblock %}
