--- a/main/templates/projects.html
+++ b/main/templates/projects.html
@@ -1,25 +1,42 @@
 {% extends "base.html" %}
 {% block body %}
 	<div class="left-space right-space">
-		<h2 style="margin-bottom: 0"><strong>Projects &amp; Collaboration</strong></h2>
+		<h2 style="margin-bottom: 0">
+			<strong>
+				<span class="en">Projects &amp; Collaboration</span>
+				<span class="fr">Les Projects &amp; La Collaboration</span>
+			</strong>
+		</h2>
 		<div class="row">
 			<div class="col-md-6">
-				<h3>Education</h3>
+				<h3>
+					<span class="en">Education</span>
+					<span class="fr">L'éducation</span>
+				</h3>
 				<ul>
 					<li>
-						BOOA runs an educational center called Peace Academy for children in need of assistance. The center provides instruction in English and French.
+						<span class="en">BOOA runs an educational center called Peace Academy for children in need of assistance. The center provides instruction in English and French.</span>
+						<span class="fr">BOOA a établit un centre d’éducation que s’appelle Peace Academy pour les enfants qui ont besoin d’aide. Le centre fourni l'instruction en Anglais et en Français.</span>
 					</li>
 				</ul>
-				<h3>Pedagogical Development</h3>
+				<h3>
+					<span class="en">Pedagogical Development</span>
+					<span class="fr">Le développement pédagogique</span>
+				</h3>
 				<ul>
 					<li>
-						Our teachers continue to further their own educations through online courses and consultation with experts.
+						<span class="en">Our teachers continue to further their own educations through online courses and consultation with experts.</span>
+						<span class="fr">Nos éducateurs continuent d’améliorer leurs connaissance par les cours sur l'internet et la consultation avec des experts.</span>
 					</li>
 				</ul>
-				<h3>Library – Computer Lab</h3>
+				<h3>
+					<span class="en">Library – Computer Lab</span>
+					<span class="fr">La bibliothèque – le centre d’informatique</span>
+				</h3>
 				<ul>
 					<li>
-						 We are gathering resources to assemble a library – lab that will provide regular access to reading materials and information technologies.
+						 <span class="en">We are gathering resources to assemble a library – lab that will provide regular access to reading materials and information technologies.</span>
+						<span class="fr">Nous assemblons les ressources pour mettre en place une bibliothèque et un centre d’informatique qui permettront l'accès aux livres et aux outils informatiques.</span>
 					</li>
 				</ul>
 			</div>
@@ -29,25 +46,37 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6">
-				<h3>Legal Aid</h3>
+				<h3>
+					<span class="en">Legal Aid</span>
+					<span class="fr">Le soutien légal</span></h3>
 				<ul>
 					<li>
-						 We are assisting with the procurement of legal identification documents and residence permits for displaced persons Benin.
+						 <span class="en">We are assisting with the procurement of legal identification documents and residence permits for displaced persons Benin.</span>
+						<span class="fr">Nous assistons l’obtention des documents d’identification légale et les cartes de séjours au Bénin au profit des personnes déplacées.</span>
 					</li>
 					<li>
-						We are also aiding families with obtaining birth certificates for unregistered children.
-					</li>
-				</ul>
-				<h3>Access to Clean Water</h3>
-				<ul>
-					<li>
-						In collaboration with Northwestern University's Engineers for a Sustainable World, we are working to provide clean water at BOOA's educational center.
+						<span class="en">We are also aiding families with obtaining birth certificates for unregistered children.</span>
+						<span class="fr">Nous aidons à l’établissement des actes de naissance pour les enfants qui sont non-enregistrés.</span>
 					</li>
 				</ul>
-				<h3>Hygiene</h3>
+				<h3>
+					<span class="en">Access to Clean Water</span>
+					<span class="fr">L’accès de l’eau potable</span>
+				</h3>
 				<ul>
 					<li>
-						We are training the community on proper waste disposal and the importance of handwashing.
+						<span class="en">In collaboration with Northwestern University's Engineers for a Sustainable World, we are working to provide clean water at BOOA's educational center.</span>
+						<span class="fr">Avec la collaboration de Northwestern University’s Engineers for a Sustainable World, nous travaillons de fournir l’eau potable à le centre d'éducation de BOOA.</span>
+					</li>
+				</ul>
+				<h3>
+					<span class="en">Hygiene</span>
+					<span class="fr">L’hygiène</span>
+				</h3>
+				<ul>
+					<li>
+						<span class="en">We are training the community on proper waste disposal and the importance of handwashing.</span>
+						<span class="fr">Nous faisons des sensibilisations sur l’importance de laver les mains et l’élimination des déchets.</span>
 					</li>
 				</ul>
 			</div>
@@ -60,18 +89,34 @@
 					<img src="{{ STATIC_URL }}images/tree_table.jpg" class="pull-left paragraph-picture" style="margin-left: 0; margin-top:56px">
 				</div>
 				<div class="pull-right col-md-7">
-					<h2><strong>Future Projects</strong></h2>
-					<h3>We are open to requests for assistance with the following areas:</h3>
-					<h3>Infrastructure Improvements</h3>
+					<h2>
+						<strong>
+							<span class="en">Future Projects</span>
+							<span class="fr">Les Projets du Futur</span>
+						</strong>
+					</h2>
+					<h3>
+						<span class="en">We are open to requests for assistance with the following areas:</span>
+						<span class="fr">Nous sommes ouverts pour les demandes d’assistance avec les domaines suivants:</span>
+					</h3>
+					<h3>
+						<span class="en">Infrastructure Improvements</span>
+						<span class="fr">L’amelioration d’infrastructure</span>
+					</h3>
 					<ul>
 						<li>
-							Wells, bathrooms, classrooms, energy.
+							<span class="en">Wells, bathrooms, classrooms, energy.</span>
+							<span class="fr">Les puits, les toilettes, les salles de classe, l’energie.</span>
 						</li>
 					</ul>
-					<h3>Human Rights Trainings</h3>
+					<h3>
+						<span class="en">Human Rights Trainings</span>
+						<span class="fr">Sensibilisation sur les droits humaines</span>
+					</h3>
 					<ul>
 						<li>
-							Women’s rights, children’s rights, displaced persons’ rights.
+							<span class="en">Women’s rights, children’s rights, displaced persons’ rights.</span>
+							<span class="fr">Les droits des femmes, des enfants et des personnes déplacées.</span>
 						</li>
 					</ul>
 				</div>
