--- a/main/templates/team.html
+++ b/main/templates/team.html
@@ -2,13 +2,18 @@
 {% block body %}
 	<div id="team-page-main">
 		<div class="row bottom-space">
-
 			<img src="{{ STATIC_URL }}images/team/remedy.png" class="team-img pull-left" width="195">
 			<div class="pull-left left-space top-space col-md-6">
 				<h3 class="name-heading"><strong>Remedy Sueza</strong></h3>
-				<h4 class="team-title"><i>Specialist &amp; Advisor in Education</i></h4>
+				<h4 class="team-title">
+					<i>
+						<span class="en">Specialist &amp; Advisor in Education</span>
+						<span class="fr">Spécialiste &amp; Conseiller en Éducation</span>
+					</i>
+				</h4>
 				<p>
-					With more than 15 years of experience in training and educating children and young teenagers, Remedy is currently Director of BOOA’s educational center, Peace Academy, in Ouidah.
+					<span class="en">With more than 15 years of experience in training and educating children and young teenagers, Remedy is currently Director of BOOA’s educational center, Peace Academy, in Ouidah.</span>
+					<span class="fr">Avec plus de 15 ans d’expérience en formation et éducation des enfants et jeunes adolescents, Remedy est actuellement Directeur du centre d’orientation éducationnelle de BOOA, que s’appelle Peace Academy.</span>
 				</p>
 			</div>
 		</div>
@@ -16,9 +21,50 @@
 			<img src="{{ STATIC_URL }}images/team/felix.png" class="team-img pull-right" width="195">
 			<div class="pull-right right-space top-space text-right col-md-6">
 				<h3 class="name-heading"><strong>Félix Aimé Mensah</strong></h3>
-				<h4 class="team-title"><i>Specialist in Rural Development &amp; Land Management</i></h4>
+				<h4 class="team-title">
+					<i>
+						<span class="en">Specialist in Rural Development &amp; Land Management</span>
+						<span class="fr">Spécialiste en Génie Rural &amp; Aménagement du Territoire</span>
+					</i>
+				</h4>
 				<p>
-					A consultant on development projects and the management of non-governmental organizations, Felix has more than 17 years of experience with related projects in Benin. He is presently the Treasurer and a local representative of BOOA. He manages daily activities and the evaluation of projects in Benin.
+					<span class="en">A consultant on development projects and the management of non-governmental organizations, Felix has more than 17 years of experience with related projects in Benin. He is presently the Treasurer and a local representative of BOOA. He manages daily activities and the evaluation of projects in Benin.</span>
+					<span class="fr">Consultant en gestion des projets de développement et management des organisations, avec plus de 17 ans d'expérience de projets pertinents au Bénin. Felix est actuellement Trésorier Général et représentant résident de BOOA, responsable à la mise en œuvre et le suivi évaluation des projets au Bénin.</span>
+				</p>
+			</div>
+		</div>
+		<div class="row bottom-space">
+			<img src="{{ STATIC_URL }}images/team/kathleen.jpg" class="team-img pull-left" width="195">
+			<div class="pull-left left-space top-space text-left col-md-6">
+				<h3 class="name-heading"><strong>Kathleen Bush-Joseph</strong></h3>
+				<h4 class="team-title">
+					<i>
+						<span class="en">University of California President’s Public Service Law Fellow</span>
+						<span class="fr">Fellow du Droit de la Service Publique du President de l'Université de Californie</span>
+					</i>
+				</h4>
+				<p>
+					<span class="en">Received a Juris Doctor degree in International and Comparative Law from the University of 
+					California at Los Angeles (UCLA) School of Law. Has previous experience with the United Nations 
+					Office of the High Commissioner for Human Rights, and with the High Commissioner for Refugees.</span>
+					<span class="fr">Elle a obtenu un doctorat en droit du Droit International et Comparatif de l'Université de Californie à Los Angeles (UCLA) École du Droit. Elle a expérience avec les Nations Unies Haut-Commissariat des Droits de l’Homme et au Haut-Commissaire des Nations Unies pour les réfugiés.</span>
+				</p>
+			</div>
+		</div>
+		<div class="row bottom-space">
+			<img src="{{ STATIC_URL }}images/team/chris.jpg" class="team-img pull-right" width="195">
+			<div class="pull-right right-space top-space text-right col-md-6">
+				<h3 class="name-heading"><strong>Chris Moirano</strong></h3>
+				<h4 class="team-title">
+					<i>
+						<span class="en">Technology Cosultant</span>
+						<span class="fr">Consultant de la Technologie</span>
+					</i>
+				</h4>
+				<p>
+					<span class="en">Computer science graduate student at New York University. Currently working as
+					a software engineer at Procured Health and for BOOA implementing the computer lab.</span>
+					<span class="fr">Étudiant de Master de la science d’informatique à l'Université de New York. Actuellement, Chris travaille comme ingénieur d’informatique à Procured Health, et pour BOOA.</span>
 				</p>
 			</div>
 		</div>
@@ -26,11 +72,17 @@
 			<img src="{{ STATIC_URL }}images/team/clara.png" class="team-img pull-left" width="195">
 			<div class="pull-left left-space top-space col-md-6">
 				<h3 class="name-heading"><strong>Clara Wagner</strong></h3>
-				<h4 class="team-title"><i>Operations Associate</i></h4>
+				<h4 class="team-title">
+					<i>
+						<span class="en">Operations Associate</span>
+						<span class="fr">Associée des Operations</span>
+					</i>
+				</h4>
 				<p>
-					Studied Immigrant Needs and the Media at Tufts University in Boston. 
+					<span class="en">Studied Immigrant Needs and the Media at Tufts University in Boston. 
 					Has work experience at several non-profits, as well as the United States 
-					Agency for International Development (USAID).
+					Agency for International Development (USAID).</span>
+					<span class="fr">Elle a étudié Les Besoins des Immigrants et le Média à l'Université de Tufts à Boston. Elle a expérience avec des organisations non-gouvernemental, ainsi que l’Agence des Etats Unies pour le Développement International.</span>
 				</p>
 			</div>
 		</div>
@@ -38,10 +90,16 @@
 			<img src="{{ STATIC_URL }}images/team/jp.png" class="team-img pull-right" width="195">
 			<div class="pull-right right-space top-space text-right col-md-6">
 				<h3 class="name-heading"><strong>Jan Pieter Snoeij</strong></h3>
-				<h4 class="team-title"><i>Operations Manager</i></h4>
+				<h4 class="team-title">
+					<i>
+						<span class="en">Operations Associate</span>
+						<span class="fr">Associée des Operations</span>
+					</i>
+				</h4>
 				<p>
-					Development Studies graduate student at the Graduate Institute (IHEID) in Geneva, Switzerland.
-					Previously obtained a Masters in International Economics.
+					<span class="en">Development Studies graduate student at the Graduate Institute (IHEID) in Geneva, Switzerland.
+					Previously obtained a Masters in International Economics.</span>
+					<span class="fr">Étudiante de Master des Études du Développement à l’Institut de Hautes Etudes Internationales et du Développement à Genève, Suisse. Il a un Master de l'Économie Internationale. </span>
 				</p>
 			</div>
 		</div>
@@ -49,34 +107,15 @@
 			<img src="{{ STATIC_URL }}images/team/stephanie.jpg" class="team-img pull-left" width="195">
 			<div class="pull-left left-space top-space col-md-6">
 				<h3 class="name-heading"><strong>Stephanie Villadiego</strong></h3>
-				<h4 class="team-title"><i>Information and Communications Technology Consultant</i></h4>
+				<h4 class="team-title">
+					<i>
+						<span class="en">Information and Communications Technology Consultant</span>
+						<span class="fr">Consultante de la Technologie d’Information et des Communications</span>
+					</i>
+				</h4>
 				<p>
-					Development Studies graduate student at the Graduate Institute (IHEID) in Geneva, Switzerland. 
-					Has previous work experience in socio-political risk analysis for extractive industries 
-					in Colombia, and the field of business and human rights.
-				</p>
-			</div>
-		</div>
-		<div class="row bottom-space">
-			<img src="{{ STATIC_URL }}images/team/kathleen.jpg" class="team-img pull-right" width="195">
-			<div class="pull-right right-space top-space text-right col-md-6">
-				<h3 class="name-heading"><strong>Kathleen Bush-Joseph</strong></h3>
-				<h4 class="team-title"><i>University of California President’s Public Service Law Fellow</i></h4>
-				<p>
-					Received a Juris Doctor degree in International and Comparative Law from the University of 
-					California at Los Angeles (UCLA) School of Law. Has previous experience with the United Nations 
-					Office of the High Commissioner for Human Rights, and with the High Commissioner for Refugees.
-				</p>
-			</div>
-		</div>
-		<div class="row bottom-space">
-			<img src="{{ STATIC_URL }}images/team/chris.jpg" class="team-img pull-left" width="195">
-			<div class="pull-left right-left top-space text-right col-md-6">
-				<h3 class="name-heading"><strong>Chris Moirano</strong></h3>
-				<h4 class="team-title"><i>Technology Cosultant</i></h4>
-				<p>
-					Computer science graduate student at New York University. Currently working as
-					a software engineer at Procured Health and for BOOA implementing the computer lab.
+					<span class="en">Development Studies graduate student at the Graduate Institute (IHEID) in Geneva, Switzerland. Has previous work experience in socio-political risk analysis for extractive industries in Colombia, and the field of business and human rights.</span>
+					<span class="fr">Étudiante de Master des Études du Développement à l’Institut de Hautes Etudes Internationales et du Développement à Genève, Suisse. Elle a expérience de l’analyse de risque politique-sociale pour les industries de l’extraction en Colombie, et dans le domaine du commerce et les droits de l’homme.</span>
 				</p>
 			</div>
 		</div>
