--- a/main/templates/vision.html
+++ b/main/templates/vision.html
@@ -8,14 +8,34 @@
 			<div class="text-container main-text">
 				<h2><strong>Vision</strong></h2>
 				<p>
-					Bras Ouverts – Open Arms (BOOA) became an officially registered non-governmental organization in Benin on March 15, 2017. BOOA's five main areas of work are:
+					<span class="en">
+						Bras Ouverts – Open Arms (BOOA) became an officially registered non-governmental organization in Benin on March 15, 2017. BOOA's five main areas of work are:
+					</span>
+					<span class="fr">
+						Bras Ouverts – Open Arms (BOOA) est devenu une organisation non-gouvernementale au Bénin le 15 de Mars 2017. Les cinq domaines centraux de l'œuvre de BOOA sont:
+					</span>
 				</p>
 				<ul>
-					<li>Facilitating access to education for children and disadvantaged families</li>
-					<li>Promoting respect for human rights, especially the rights of women and children, through training and support</li>
-					<li>Enhancing durable access to potable water, to food and to renewable energy, and contributing to the protection of the environment</li>
-					<li>Promoting health education through trainings on the prevention of diseases and on community hygiene</li>
-					<li>Aiding families with developing revenue-generating activities that will help them achieve autonomy</li>
+					<li>
+						<span class="en">Facilitating access to education for children and disadvantaged families</span>
+						<span class="fr">Faciliter l’accès à l’éducation des enfants, des familles défavorisées en procédant à la prise en charge de leur scolarité</span>
+					</li>
+					<li>
+						<span class="en">Promoting respect for human rights, especially the rights of women and children, through training and support</span>
+						<span class="fr">Favoriser le respect des droits humains, notamment ceux des femmes et des enfants à travers des sensibilisations et des plaidoyers</span>
+					</li>
+					<li>
+						<span class="en">Enhancing durable access to potable water, to food and to renewable energy, and contributing to the protection of the environment</span>
+						<span class="fr">Favoriser l’accès durable à l’eau potable, à la nourriture, à l’énergie renouvelable et contribuer à la protection de l’environnement</span>
+					</li>
+					<li>
+						<span class="en">Promoting health education through trainings on the prevention of diseases and on community hygiene</span>
+						<span class="fr">Favoriser l’éducation à la santé à travers les séances de sensibilisation sur la prévention des maladies et l’hygiène dans la communauté</span>
+					</li>
+					<li>
+						<span class="en">Aiding families with developing revenue-generating activities that will help them achieve autonomy</span>
+						<span class="fr">Aider les parents d’élèves à développer des activités génératrices de revenus pouvant les rendre compétents et autonomes</span>
+					</li>
 				</ul>
 			</div>
 		</div>
